@@ -21,32 +21,21 @@
 // ********************************************************************
 //
 //
-// $Id: G4TrajectoryPoint.hh,v 1.8 2002-09-04 02:09:37 asaim Exp $
+// $Id: G4SmoothTrajectoryPoint.hh,v 1.1 2002-09-04 02:09:37 asaim Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
 //---------------------------------------------------------------
 //
-// G4TrajectoryPoint.hh
+// G4SmoothTrajectoryPoint.hh
 //
 // class description:
-//   This class represents the trajectory of a particle tracked.
-//   It includes information of 
-//     1) List of trajectory points which compose the trajectory,
-//     2) static information of particle which generated the 
-//        trajectory, 
-//     3) trackID and parent particle ID of the trajectory,
-//     4) termination condition of the trajectory.
-//
-// Contact:
-//   Questions and comments to this code should be sent to
-//     Katsuya Amako  (e-mail: Katsuya.Amako@kek.jp)
-//     Takashi Sasaki (e-mail: Takashi.Sasaki@kek.jp)
+//  This class contains position and auxiliary points of a trajectory point.
 //
 // ---------------------------------------------------------------
 
-#ifndef G4TrajectoryPoint_h
-#define G4TrajectoryPoint_h 1
+#ifndef G4SmoothTrajectoryPoint_h
+#define G4SmoothTrajectoryPoint_h 1
 
 #include "G4VTrajectoryPoint.hh"
 #include "globals.hh"                // Include from 'global'
@@ -54,9 +43,7 @@
 #include "G4Allocator.hh"            // Include from 'particle+matter'
 
 
-////////////////////////
-class G4TrajectoryPoint : public G4VTrajectoryPoint
-//////////////////////// 
+class G4SmoothTrajectoryPoint : public G4VTrajectoryPoint
 {
 
 //--------
@@ -64,23 +51,26 @@ public: // without description
 //--------
 
 // Constructor/Destructor
-   G4TrajectoryPoint();
-   G4TrajectoryPoint(G4ThreeVector pos);
-   G4TrajectoryPoint(const G4TrajectoryPoint &right);
-   virtual ~G4TrajectoryPoint();
+   G4SmoothTrajectoryPoint();
+   G4SmoothTrajectoryPoint(G4ThreeVector pos);
+   G4SmoothTrajectoryPoint(const G4SmoothTrajectoryPoint &right);
+   virtual ~G4SmoothTrajectoryPoint();
 
 // Operators
    inline void *operator new(size_t);
    inline void operator delete(void *aTrajectoryPoint);
-   inline int operator==(const G4TrajectoryPoint& right) const
+   inline int operator==(const G4SmoothTrajectoryPoint& right) const
    { return (this==&right); };
 
 // Get/Set functions
    inline const G4ThreeVector GetPosition() const
-   { return fPosition; };
+   { return fPosition; }
+   inline const G4std::vector<G4ThreeVector*>* GetAuxiliaryPoints() const
+   { return fAuxiliaryPointVector; }
 
- // Get method for HEPRep style attributes
-   virtual const G4AttValueList* GetAttValues() const;
+// Get method for HEPRep style attributes
+   const G4AttValueList* GetAttValues() const;
+
 
 //---------
    private:
@@ -88,22 +78,24 @@ public: // without description
 
 // Member data
    G4ThreeVector fPosition;
+   G4std::vector<G4ThreeVector*>* fAuxiliaryPointVector;
+
 
 };
 
 
-extern G4Allocator<G4TrajectoryPoint> aTrajectoryPointAllocator;
+extern G4Allocator<G4SmoothTrajectoryPoint> aTrajectoryPointAllocator;
 
-inline void* G4TrajectoryPoint::operator new(size_t)
+inline void* G4SmoothTrajectoryPoint::operator new(size_t)
 {
    void *aTrajectoryPoint;
    aTrajectoryPoint = (void *) aTrajectoryPointAllocator.MallocSingle();
    return aTrajectoryPoint;
 }
 
-inline void G4TrajectoryPoint::operator delete(void *aTrajectoryPoint)
+inline void G4SmoothTrajectoryPoint::operator delete(void *aTrajectoryPoint)
 {
-   aTrajectoryPointAllocator.FreeSingle((G4TrajectoryPoint *) aTrajectoryPoint);
+   aTrajectoryPointAllocator.FreeSingle((G4SmoothTrajectoryPoint *) aTrajectoryPoint);
 }
 
 #endif
