@@ -21,13 +21,13 @@
 // ********************************************************************
 //
 //
-// $Id: G4Trajectory.cc,v 1.15 2002-09-04 02:09:38 asaim Exp $
+// $Id: G4SmoothTrajectory.cc,v 1.1 2002-09-04 02:09:38 asaim Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
 // ---------------------------------------------------------------
 //
-// G4Trajectory.cc
+// G4SmoothTrajectory.cc
 //
 // Contact:
 //   Questions and comments to this code should be sent to
@@ -38,8 +38,8 @@
 // ---------------------------------------------------------------
 
 
-#include "G4Trajectory.hh"
-#include "G4TrajectoryPoint.hh"
+#include "G4SmoothTrajectory.hh"
+#include "G4SmoothTrajectoryPoint.hh"
 #include "G4ParticleTable.hh"
 #include "G4ThreeVector.hh"
 #include "G4Polyline.hh"
@@ -48,15 +48,15 @@
 #include "G4VisAttributes.hh"
 #include "G4VVisManager.hh"
 
-G4Allocator<G4Trajectory> aTrajectoryAllocator;
+G4Allocator<G4SmoothTrajectory> aTrajectoryAllocator;
 
-G4Trajectory::G4Trajectory()
+G4SmoothTrajectory::G4SmoothTrajectory()
 :  positionRecord(0), fTrackID(0), fParentID(0),
    PDGEncoding( 0 ), PDGCharge(0.0), ParticleName(""),
    initialMomentum( G4ThreeVector() )
 {;}
 
-G4Trajectory::G4Trajectory(const G4Track* aTrack)
+G4SmoothTrajectory::G4SmoothTrajectory(const G4Track* aTrack)
 {
    G4ParticleDefinition * fpParticleDefinition = aTrack->GetDefinition();
    ParticleName = fpParticleDefinition->GetParticleName();
@@ -67,10 +67,10 @@ G4Trajectory::G4Trajectory(const G4Track* aTrack)
    initialMomentum = aTrack->GetMomentum();
    positionRecord = new TrajectoryPointContainer();
    // Following is for the first trajectory point
-   positionRecord->push_back(new G4TrajectoryPoint(aTrack->GetPosition()));
+   positionRecord->push_back(new G4SmoothTrajectoryPoint(aTrack->GetPosition()));
 }
 
-G4Trajectory::G4Trajectory(G4Trajectory & right)
+G4SmoothTrajectory::G4SmoothTrajectory(G4SmoothTrajectory & right)
 {
   ParticleName = right.ParticleName;
   PDGCharge = right.PDGCharge;
@@ -82,12 +82,12 @@ G4Trajectory::G4Trajectory(G4Trajectory & right)
 
   for(size_t i=0;i<right.positionRecord->size();i++)
   {
-    G4TrajectoryPoint* rightPoint = (G4TrajectoryPoint*)((*(right.positionRecord))[i]);
-    positionRecord->push_back(new G4TrajectoryPoint(*rightPoint));
+    G4SmoothTrajectoryPoint* rightPoint = (G4SmoothTrajectoryPoint*)((*(right.positionRecord))[i]);
+    positionRecord->push_back(new G4SmoothTrajectoryPoint(*rightPoint));
   }
 }
 
-G4Trajectory::~G4Trajectory()
+G4SmoothTrajectory::~G4SmoothTrajectory()
 {
   //  positionRecord->clearAndDestroy();
   size_t i;
@@ -99,7 +99,7 @@ G4Trajectory::~G4Trajectory()
   delete positionRecord;
 }
 
-void G4Trajectory::ShowTrajectory(G4std::ostream& os) const
+void G4SmoothTrajectory::ShowTrajectory(G4std::ostream& os) const
 {
    os << G4endl << "TrackID =" << fTrackID 
         << ":ParentID=" << fParentID << G4endl;
@@ -109,76 +109,35 @@ void G4Trajectory::ShowTrajectory(G4std::ostream& os) const
         << " points." << G4endl;
 
    for( size_t i=0 ; i < positionRecord->size() ; i++){
-       G4TrajectoryPoint* aTrajectoryPoint = (G4TrajectoryPoint*)((*positionRecord)[i]);
+       G4SmoothTrajectoryPoint* aTrajectoryPoint = (G4SmoothTrajectoryPoint*)((*positionRecord)[i]);
        os << "Point[" << i << "]" 
             << " Position= " << aTrajectoryPoint->GetPosition() << G4endl;
    }
 }
 
-void G4Trajectory::DrawTrajectory(G4int i_mode) const
+void G4SmoothTrajectory::DrawTrajectory(G4int i_mode) const
 {
-
-   G4VVisManager* pVVisManager = G4VVisManager::GetConcreteInstance();
-   G4ThreeVector pos;
-
-   if(i_mode>=0)
-   {
-     G4Polyline pPolyline;
-     for (size_t i = 0; i < positionRecord->size() ; i++) {
-       G4TrajectoryPoint* aTrajectoryPoint = (G4TrajectoryPoint*)((*positionRecord)[i]);
-       pos = aTrajectoryPoint->GetPosition();
-       pPolyline.push_back( pos );
-     }
-
-     G4Colour colour;
-     if(PDGCharge<0.) 
-        colour = G4Colour(1.,0.,0.);
-     else if(PDGCharge>0.) 
-        colour = G4Colour(0.,0.,1.);
-     else 
-        colour = G4Colour(0.,1.,0.);
-
-     G4VisAttributes attribs(colour);
-     pPolyline.SetVisAttributes(attribs);
-     if(pVVisManager) pVVisManager->Draw(pPolyline);
-   }
-
-   if(i_mode!=0)
-   {
-     for(size_t j=0; j<positionRecord->size(); j++) {
-       G4TrajectoryPoint* aTrajectoryPoint = (G4TrajectoryPoint*)((*positionRecord)[j]);
-       pos = aTrajectoryPoint->GetPosition();
-       G4Circle circle( pos );
-       circle.SetScreenSize(0.001*i_mode);
-       circle.SetFillStyle(G4Circle::filled);
-       G4Colour colSpot(0.,0.,0.);
-       G4VisAttributes attSpot(colSpot);
-       circle.SetVisAttributes(attSpot);
-       if(pVVisManager) pVVisManager->Draw(circle);
-     }
-   }
-
 }
 
-const G4AttValueList* G4Trajectory::GetAttValues() const
+const G4AttValueList* G4SmoothTrajectory::GetAttValues() const
 { return 0; }
 
-void G4Trajectory::AppendStep(const G4Step* aStep)
+void G4SmoothTrajectory::AppendStep(const G4Step* aStep)
 {
-   positionRecord->push_back( new G4TrajectoryPoint(aStep->GetPostStepPoint()->
+   positionRecord->push_back( new G4SmoothTrajectoryPoint(aStep->GetPostStepPoint()->
                                  GetPosition() ));
 }
   
-G4ParticleDefinition* G4Trajectory::GetParticleDefinition()
+G4ParticleDefinition* G4SmoothTrajectory::GetParticleDefinition()
 {
    return (G4ParticleTable::GetParticleTable()->FindParticle(ParticleName));
 }
 
-void G4Trajectory::MergeTrajectory(G4VTrajectory* secondTrajectory)
+void G4SmoothTrajectory::MergeTrajectory(G4VTrajectory* secondTrajectory)
 {
   if(!secondTrajectory) return;
 
-  G4Trajectory* seco = (G4Trajectory*)secondTrajectory;
+  G4SmoothTrajectory* seco = (G4SmoothTrajectory*)secondTrajectory;
   G4int ent = seco->GetPointEntries();
   for(G4int i=1;i<ent;i++) // initial point of the second trajectory should not be merged
   { 
