@@ -1,4 +1,4 @@
-$Id: History,v 1.36 2002-08-21 22:50:51 asaim Exp $
+$Id: History,v 1.37 2002-09-04 02:09:35 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,12 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Sep 03, 02 M.Asai
+- Start working for trajectory related issues
+  o Modification made : G4VTrajectory, G4VTrajectoryPoint, G4Trajectory, G4TrajectoryPoint
+  o Introduced : G4SmoothTrajectory, G4SmoothTrajectoryPoint
+
 Aug 21, 02 M.Asai (tracking-V04-01-01)
 - G4TrackingManager.cc
   o Set fpTrajectory pointer to zero when the trajectory is deleted.
